# ChessDataAnalyzer

./: .gitignore  .replit  README.md  app.py  check_english_opening.py  check_variation.py  deployment_guide.md  find_queen_opening.py  opening_tree.py.bak  pyproject.toml  replit.md  requirements.txt  streamlit_app.py
.streamlit/: config.toml
assets/: chess_style.css  custom_interactions.js
attached_assets/: Pasted-streamlit-errors-StreamlitDuplicateElementId-There-are-multiple-radio-elements-with-the-same-auto-g-1743300376952.txt  Pasted-streamlit-errors-StreamlitDuplicateElementKey-There-are-multiple-elements-with-the-same-key-side-f-1743304117260.txt
components/: charts.py  filters.py  game_analyzer.py  opening_explorer.py  opening_tree.py
utils/: data_processor.py  google_sheets.py  ml_analysis.py  pgn_analyzer.py
